Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Number__c</fullName>
        <label>Drivers License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Candidate</relationshipLabel>
        <relationshipName>Candidate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picture_ID__c</fullName>
        <label>Picture ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_Link__c</fullName>
        <formula>IF( LEN( Picture_ID__c )&lt;&gt;0, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;  Picture_ID__c,&quot;Candidate Picture&quot;),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <formula>IF( LEN( Picture_ID__c )&lt;&gt;0,&quot;/servlet/servlet.FileDownload?file=&quot; &amp;  Picture_ID__c,&quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <formula>IMAGE( Picture_URL__c ,&quot;Picture&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate</pluralLabel>
    <recordTypes>
        <fullName>bvxb</fullName>
        <active>true</active>
        <label>bvxb</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Needs_Approval__c</fullName>
        <label>Needs Approval</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Needs_Discount__c</fullName>
        <label>Needs Discount</label>
    </sharingReasons>
    <validationRules>
        <fullName>Valid_SSN_Format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( OR( LEN( Social_Security_Number__c )=0, REGEX( Social_Security_Number__c ,&quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)  ) )</errorConditionFormula>
        <errorDisplayField>Social_Security_Number__c</errorDisplayField>
        <errorMessage>enter proper format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Consistent_With_State</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VLOOKUP( $ObjectType.Zip_Code__c.Fields.State__c , $ObjectType.Zip_Code__c.Fields.Name,  LEFT( Zip_Postal_Code__c ,5) ) &lt;&gt;  Country__c )</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>zip code does not exist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_must_be_Valid_Postal_US_Code</fullName>
        <active>true</active>
        <description>5 or 5-4 format</description>
        <errorConditionFormula>( Country__c  == &quot;US&quot;  ||  Country__c  == &quot;USA&quot; )  &amp;&amp;  NOT( REGEX( Zip_Postal_Code__c ,&quot;\\d{5}(-\\d{4})?&quot;) )</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>5 or 5-4 format</errorMessage>
    </validationRules>
</CustomObject>